--- a/buildpack.toml
+++ b/buildpack.toml
@@ -1,11 +1,11 @@
 api = "0.4"
 
 [buildpack]
-id = "fagiani/apt"
+id = "dajulia3/apt"
 version = "0.1.0"
 name = "apt Packages Buildpack"
 homepage = "https://github.com/fagiani/apt-buildpack"
-description = "Installs apt packages for further builds and runtime"
+description = "Installs apt packages for further builds and runtime with support for bionic stack. Forked from fagiani/apt."
 keywords = ["apt", "packages", "ubuntu"]
 
 [[buildpack.licenses]]
@@ -16,3 +16,6 @@ id = "heroku-18"
 
 [[stacks]]
 id = "heroku-20"
+
+[[stacks]]
+id = "io.buildpacks.stacks.bionic"
